--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,5 +1,62 @@
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.dropdown-menu {
+    min-width: inherit;
+}
+
+.nav-item img {
+    margin-right: 10px;
+}
+
+.nav-link {
+    position: relative;
+    display: inline-block;
+}
+
+.nav-link:not(.dropdown-toggle)::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.1ex;
+    background-color: white;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 1s;
+}
+
+@media screen and (max-width: 992px) {
+    .nav-link:not(a.active):hover::after {
+        transform: scaleX(1);
+    }
+}
+
+@media screen and (min-width: 993px) {
+    .nav-link:not(.active):hover::after {
+        transform: scaleX(0.8);
+    }
+}
+
+/*TODO: Opacity or just slightly darker color to visualize active element*/
 .bg-dark-blue {
-    background-color: #1a1a4c;
+    background-color: rgb(26, 26, 90);
+}
+
+li .nav-link {
+    padding: 5px;
+}
+
+li .active {
+    border-radius: 15px;
+    background-color: rgb(50, 50, 40);
 }
 
 footer a {
